fixed invisible font

--- a/views/css/style.css
+++ b/views/css/style.css
@@ -8,6 +8,10 @@ p {
     color: white;
 }
 
+legend {
+    color: white;
+}
+
 body {
     display: flex;
     flex-direction: column;
